[gd_scene load_steps=65 format=2]

[ext_resource path="res://Scenes/Stage/SolidPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfall/iroha_waterfall2.png" type="Texture" id=2]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist1.png" type="Texture" id=3]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist8.png" type="Texture" id=4]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist10.png" type="Texture" id=5]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_platform.png" type="Texture" id=6]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfall/iroha_waterfall1.png" type="Texture" id=7]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfall/iroha_waterfall3.png" type="Texture" id=8]
[ext_resource path="res://Stages/Waterfall/MPlatform.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Stage/SoftPlatform.tscn" type="PackedScene" id=10]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree13.png" type="Texture" id=11]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_sky.png" type="Texture" id=12]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_cliff.png" type="Texture" id=13]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfall/iroha_waterfall4.png" type="Texture" id=14]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfall/iroha_waterfall5.png" type="Texture" id=15]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist2.png" type="Texture" id=16]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist3.png" type="Texture" id=17]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist5.png" type="Texture" id=18]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist4.png" type="Texture" id=19]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist6.png" type="Texture" id=20]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist7.png" type="Texture" id=21]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_mist/iroha_mist9.png" type="Texture" id=22]
[ext_resource path="res://Stages/Waterfall/Waterfall.gd" type="Script" id=23]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_pinwheel/iroha_pinwheel4.png" type="Texture" id=24]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_pinwheel/iroha_pinwheel5.png" type="Texture" id=25]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_pinwheel/iroha_pinwheel2.png" type="Texture" id=26]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_pinwheel/iroha_pinwheel3.png" type="Texture" id=27]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_pinwheel/iroha_pinwheel1.png" type="Texture" id=28]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree18.png" type="Texture" id=29]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree19.png" type="Texture" id=30]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree16.png" type="Texture" id=31]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree10.png" type="Texture" id=32]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree12.png" type="Texture" id=33]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree11.png" type="Texture" id=34]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree9.png" type="Texture" id=35]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree15.png" type="Texture" id=36]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree17.png" type="Texture" id=37]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree20.png" type="Texture" id=38]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree14.png" type="Texture" id=39]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree5.png" type="Texture" id=40]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree1.png" type="Texture" id=41]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree7.png" type="Texture" id=42]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree6.png" type="Texture" id=43]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree8.png" type="Texture" id=44]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree2.png" type="Texture" id=45]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree3.png" type="Texture" id=46]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_tree/iroha_tree4.png" type="Texture" id=47]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront10.png" type="Texture" id=48]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront5.png" type="Texture" id=49]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront6.png" type="Texture" id=50]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_soft.png" type="Texture" id=51]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront4.png" type="Texture" id=52]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront1.png" type="Texture" id=53]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront3.png" type="Texture" id=54]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront7.png" type="Texture" id=55]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront9.png" type="Texture" id=56]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_water.png" type="Texture" id=57]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront2.png" type="Texture" id=58]
[ext_resource path="res://Stages/Waterfall/Resources/iroha_waterfront/iroha_waterfront8.png" type="Texture" id=59]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 4 ), ExtResource( 22 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 11 ), ExtResource( 39 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 37 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="AnimatedTexture" id=5]
frames = 10
fps = 15.0
frame_0/texture = ExtResource( 53 )
frame_1/texture = ExtResource( 58 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 54 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 52 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 49 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 50 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 55 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 59 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 56 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 48 )
frame_9/delay_sec = 0.0

[node name="Waterfall" type="Node2D"]
script = ExtResource( 23 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.7 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, -64 )
texture = ExtResource( 12 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 0, 83 )
texture = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 0, 83 )
frames = SubResource( 1 )
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 0, 195 )
frames = SubResource( 2 )
frame = 8
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 292, -14 )
frames = SubResource( 4 )
frame = 19
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( -292, -14 )
scale = Vector2( -1, 1 )
frames = SubResource( 4 )
frame = 18
playing = true

[node name="MainPlatform" type="TextureRect" parent="."]
margin_left = -384.0
margin_top = 128.0
margin_right = 384.0
margin_bottom = 320.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="MainPlatform"]
position = Vector2( 302, -19 )
frames = SubResource( 3 )
frame = 4
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="MainPlatform"]
position = Vector2( 466, -19 )
frames = SubResource( 3 )
frame = 4
playing = true

[node name="TextureRect" type="TextureRect" parent="MainPlatform"]
margin_left = -64.0
margin_top = 67.0
margin_right = 832.0
margin_bottom = 99.0
texture = SubResource( 5 )
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MainPlatform"]
margin_left = -64.0
margin_top = 99.0
margin_right = 832.0
margin_bottom = 191.0
texture = ExtResource( 57 )
stretch_mode = 2

[node name="SolidPlatform" parent="MainPlatform" instance=ExtResource( 1 )]
visible = false
margin_left = -64.0
margin_right = 832.0
margin_bottom = 192.0

[node name="MPlatform1" type="Node2D" parent="."]
position = Vector2( 0, 40 )
script = ExtResource( 9 )

[node name="MPlatform" type="Node2D" parent="MPlatform1"]
position = Vector2( -256, 0 )

[node name="Sprite" type="Sprite" parent="MPlatform1/MPlatform"]
position = Vector2( 0, 36 )
texture = ExtResource( 51 )

[node name="SoftPlatform" parent="MPlatform1/MPlatform" instance=ExtResource( 10 )]
margin_left = -64.0
margin_right = 64.0
margin_bottom = 8.0

[node name="Waypoints" type="Node" parent="MPlatform1"]

[node name="A" type="Position2D" parent="MPlatform1/Waypoints"]
position = Vector2( -256, 40 )

[node name="B" type="Position2D" parent="MPlatform1/Waypoints"]
position = Vector2( -128, 40 )

[node name="MPlatform2" type="Node2D" parent="."]
position = Vector2( 0, 40 )
script = ExtResource( 9 )

[node name="MPlatform" type="Node2D" parent="MPlatform2"]
position = Vector2( 256, 0 )

[node name="Sprite" type="Sprite" parent="MPlatform2/MPlatform"]
position = Vector2( 0, 36 )
texture = ExtResource( 51 )

[node name="SoftPlatform" parent="MPlatform2/MPlatform" instance=ExtResource( 10 )]
margin_left = -64.0
margin_right = 64.0
margin_bottom = 8.0

[node name="Waypoints" type="Node" parent="MPlatform2"]

[node name="A" type="Position2D" parent="MPlatform2/Waypoints"]
position = Vector2( 256, 40 )

[node name="B" type="Position2D" parent="MPlatform2/Waypoints"]
position = Vector2( 128, 40 )

[node name="P1_Position" type="Position2D" parent="."]
position = Vector2( -128, 128 )

[node name="P2_Position" type="Position2D" parent="."]
position = Vector2( 128, 128 )

[node name="MiddlePosition" type="Position2D" parent="."]
position = Vector2( 0, 128 )

[node name="StageBox" type="ReferenceRect" parent="."]
visible = false
margin_left = -384.0
margin_top = -384.0
margin_right = 384.0
margin_bottom = 256.0
__meta__ = {
"_edit_lock_": true
}

[node name="BlastBarrierU" type="ColorRect" parent="StageBox"]
margin_left = -128.0
margin_top = -128.0
margin_right = 768.0
color = Color( 0, 0, 0, 1 )

[node name="BlastBarrierL" type="ColorRect" parent="StageBox"]
margin_left = -128.0
margin_top = -128.0
margin_bottom = 704.0
color = Color( 0, 0, 0, 1 )

[node name="BlastBarrierR" type="ColorRect" parent="StageBox"]
margin_left = 768.0
margin_top = -128.0
margin_right = 896.0
margin_bottom = 704.0
color = Color( 0, 0, 0, 1 )

[node name="RespawnPoints" type="Node2D" parent="."]
position = Vector2( 0, 32 )

[node name="RespawnPoint1" type="Position2D" parent="RespawnPoints"]
position = Vector2( -192, 40 )

[node name="RespawnPoint2" type="Position2D" parent="RespawnPoints"]
position = Vector2( -128, -128 )

[node name="RespawnPoint3" type="Position2D" parent="RespawnPoints"]
position = Vector2( -128, 40 )

[node name="RespawnPoint4" type="Position2D" parent="RespawnPoints"]
position = Vector2( 0, -168 )

[node name="RespawnPoint5" type="Position2D" parent="RespawnPoints"]
position = Vector2( 0, -96 )

[node name="RespawnPoint6" type="Position2D" parent="RespawnPoints"]
position = Vector2( 0, 40 )

[node name="RespawnPoint7" type="Position2D" parent="RespawnPoints"]
position = Vector2( 128, 40 )

[node name="RespawnPoint8" type="Position2D" parent="RespawnPoints"]
position = Vector2( 128, -128 )

[node name="RespawnPoint9" type="Position2D" parent="RespawnPoints"]
position = Vector2( 192, 40 )
